--- a/TheMovieDatabase/Common/Resources/Config.plist
+++ b/TheMovieDatabase/Common/Resources/Config.plist
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!--
-   Config.plist
-   TheMovieDatabase
-
-   Created by Marcelo José on 08/05/2019.
-   Copyright (c) 2019 Marcelo José. All rights reserved.
--->
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-        <key>ImagesURL</key>
-        <string>https://image.tmdb.org/t/p/w185_and_h278_bestv2/</string>
-        <key>BaseURL</key>
-        <string>https://api.themoviedb.org/3/</string>
-        <key>ApiKey</key>
-        <string>bb9ac5448ad8593af996f124a80e868e</string>
-    </dict>
+<dict>
+	<key>thumbnailURL</key>
+	<string>https://image.tmdb.org/t/p/w185_and_h278_bestv2/</string>
+	<key>imageURL</key>
+	<string>https://image.tmdb.org/t/p/w600_and_h900_bestv2/</string>
+	<key>baseURL</key>
+	<string>https://api.themoviedb.org/3/</string>
+	<key>apiKey</key>
+	<string>bb9ac5448ad8593af996f124a80e868e</string>
+</dict>
 </plist>
